# prgl

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  camera_8c.html  camera_8c.js  camera_8c_source.html  camera_8h.html  camera_8h.js  camera_8h_source.html  classes.html  common__macros_8h.html  common__macros_8h.js  common__macros_8h_source.html  common_macros.h  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_vars.html  game_8c.html  game_8c.js  game_8c_source.html  game_8h.html  game_8h.js  game_8h_source.html  game__object_8c.html  game__object_8c.js  game__object_8c_source.html  game__object_8h.html  game__object_8h.js  game__object_8h_source.html  globals.html  globals_c.html  globals_defs.html  (+128 more)
.github/workflows/: LICENSE
include/: camera.h  common_macros.h  game.h  game_object.h  input.h  lighting.h  mathx.h  mesh.h  render.h  screen.h  shaders.h  texture.h  types.h  window.h
search/: all_0.js  all_1.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  files_0.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_10.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  (+9 more)
src/: camera.c  camera_internal.h  game.c  game_object.c  input.c  lighting.c  mathx.c  mesh.c  mesh_internal.h  render.c  render_internal.h  screen.c  screen_internal.h  shaders.c  shaders_init.c  shaders_init_internal.h  shaders_internal.h  texture.c  texture_internal.h  transform.c  transform_internal.h  window.c  window_internal.h
